test/error/syntax/missing_type_var.kat
func main(argc: int, argv: str) => int {
  let i: = 1;
}
